<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">THE VOICE</string>
    <string name="map_view">Map view</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="map_view_string">MAP VIEW</string>
    <string name="care_home_string">Are you looking for a care home?</string>
    <string name="login_string">LOGIN</string>
    <string name="forgot_your_password__string">FORGOT YOUR PASSWORD?</string>
    <string name="if_you_are_new_here_sign_up_string">if you are new here Sign Up</string>
    <string name="userid_ek1_string">Userid</string>
    <string name="password_ek1_string">password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="peace">Peace</string>
    <string name="email_id">Email ID</string>
    <string name="login">Login</string>
    <string name="firstname">FirstName</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="select_your_university">Select your University</string>


    <string-array name="university_list">
        <item>Select your University</item>
        <item>Algoma University</item>
        <item>Brock University</item>
        <item>Carleton University</item>
        <item>Lakehead University</item>
        <item>Laurentian University</item>
        <item>McMaster University</item>
        <item>Nipissing University</item>
        <item>OCAD University</item>
        <item>Ontario Tech University</item>
        <item>Queen\'s University</item>
        <item>Royal Military College of Canada</item>
        <item>Ryerson University</item>
        <item>Trent University</item>
        <item>University of Guelph</item>
        <item>University of Ottawa</item>
        <item>University of Toronto</item>
        <item>University of Waterloo</item>
        <item>University of Windsor</item>
        <item>Western University</item>
        <item>Wilfrid Laurier University</item>
        <item>York University</item>
    </string-array>
</resources>