<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		iphone_13_pro_max___1
	 *	@date 		Monday 13th of March 2023 09:38:37 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/iphone_13_pro_max___1" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_iphone_13_pro_max___1_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__iphone_13_pro_max___1_ek2"
					android:background="@drawable/_bg__iphone_13_pro_max___1_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="428dp"
					android:layout_height="926dp" />

				<ImageView android:id="@+id/image_1"
					android:src="@drawable/image_1"
					android:contentDescription="image_1"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="458dp"
					android:layout_height="930dp" />

				<View   android:id="@+id/rectangle_1"
					android:background="@drawable/rectangle_1_shape"
					 android:layout_marginStart="32dp"
					android:layout_marginTop="524dp"
					android:layout_width="377dp"
					android:layout_height="56dp" />

				<View   android:id="@+id/mapview"
					android:background="@drawable/mapview_shape"
					 android:layout_marginStart="122dp"
					android:layout_marginTop="738dp"
					android:layout_width="218dp"
					android:layout_height="58dp" />

				<TextView android:id="@+id/map_view"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:textSize="24sp"
					android:textColor="@color/map_view_color"
					android:layout_marginLeft="156dp"
					android:layout_marginTop="752dp"
					android:layout_width="157dp"
					android:layout_height="51dp"
					android:text="@string/map_view_string"
					 />

				<TextView android:id="@+id/care_home"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:textSize="24sp"
					android:textColor="@color/_bg__iphone_13_pro_max___1_ek2_color"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="655dp"
					android:layout_width="425dp"
					android:layout_height="50dp"
					android:text="@string/care_home_string"
					 />

				<View   android:id="@+id/line_1"
					android:background="@drawable/line_1_shape"
					 android:layout_marginStart="30dp"
					android:layout_marginTop="590dp"
					android:layout_width="377dp"
					android:layout_height="1dp" />

				<TextView android:id="@+id/login"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:textSize="36sp"
					android:textColor="@color/map_view_color"
					android:layout_marginLeft="161dp"
					android:layout_marginTop="530dp"
					android:layout_width="181dp"
					android:layout_height="59dp"
					android:text="@string/login_string"
					 />

				<TextView android:id="@+id/forgot_your_password_"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:textSize="12sp"
					android:textColor="@color/map_view_color"
					android:layout_marginLeft="30dp"
					android:layout_marginTop="500dp"
					android:layout_width="194dp"
					android:layout_height="33dp"
					android:text="@string/forgot_your_password__string"
					 />

				<View   android:id="@+id/password"
					android:background="@drawable/password_shape"
					 android:layout_marginStart="30dp"
					android:layout_marginTop="420dp"
					android:layout_width="367dp"
					android:layout_height="60dp" />

				<View   android:id="@+id/userid"
					android:background="@drawable/userid_shape"
					 android:layout_marginStart="30dp"
					android:layout_marginTop="340dp"
					android:layout_width="367dp"
					android:layout_height="60dp" />


				<RelativeLayout android:id="@+id/the_voice"
					android:layout_marginTop="63dp"
					android:layout_marginStart="117dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/the_voice_ek1"
						android:src="@drawable/the_voice_ek1"
						android:contentDescription="the_voice_ek1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="192.68dp"
						android:layout_height="26.9dp" />

				</RelativeLayout>

				<TextView android:id="@+id/if_you_are_new_here_sign_up"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="@color/_bg__iphone_13_pro_max___1_ek2_color"
					android:layout_marginLeft="110dp"
					android:layout_marginTop="614dp"
					android:layout_width="251dp"
					android:layout_height="37dp"
					android:text="@string/if_you_are_new_here_sign_up_string"
					 />

				<TextView android:id="@+id/userid_ek1"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="@color/map_view_color"
					android:layout_marginLeft="39dp"
					android:layout_marginTop="347dp"
					android:layout_width="142dp"
					android:layout_height="31dp"
					android:text="@string/userid_ek1_string"
					 />

				<TextView android:id="@+id/password_ek1"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:textSize="16sp"
					android:textColor="@color/map_view_color"
					android:layout_marginLeft="40dp"
					android:layout_marginTop="430dp"
					android:layout_width="121dp"
					android:layout_height="31dp"
					android:text="@string/password_ek1_string"
					 />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>