<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RelativeLayout android:id="@+id/content_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >


                    <RelativeLayout
                        android:id="@+id/page_iphone_13_pro_max___1_ek1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        tools:ignore="UselessParent">

                        <View
                            android:id="@+id/_bg__iphone_13_pro_max___1_ek2"
                            android:layout_width="428dp"
                            android:layout_height="926dp"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:background="@drawable/_bg__iphone_13_pro_max___1_ek2_shape" />

                        <ImageView
                            android:id="@+id/image_1"
                            android:layout_width="458dp"
                            android:layout_height="930dp"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:contentDescription="image_1"
                            android:src="@drawable/image_1" />

                        <Button
                            android:id="@+id/MapViewButton"
                            android:layout_width="157dp"
                            android:layout_height="51dp"
                            android:layout_marginLeft="156dp"
                            android:layout_marginTop="752dp"
                            android:fontFamily="Inter"
                            android:text="@string/map_view_string"
                            android:textColor="@color/map_view_color"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/care_home"
                            android:layout_width="425dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="33dp"
                            android:layout_marginTop="655dp"
                            android:fontFamily="Inter"
                            android:text="@string/care_home_string"
                            android:textColor="@color/_bg__iphone_13_pro_max___1_ek2_color"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/line_1"
                            android:layout_width="377dp"
                            android:layout_height="1dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="590dp"
                            android:background="@drawable/line_1_shape" />

                        <TextView
                            android:id="@+id/login"
                            android:layout_width="181dp"
                            android:layout_height="59dp"
                            android:layout_marginLeft="161dp"
                            android:layout_marginTop="530dp"
                            android:fontFamily="Inter"
                            android:text="@string/login_string"
                            android:textColor="@color/map_view_color"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/forgot_your_password_"
                            android:layout_width="194dp"
                            android:layout_height="33dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="500dp"
                            android:fontFamily="Inter"
                            android:text="@string/forgot_your_password__string"
                            android:textColor="@color/map_view_color"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/password"
                            android:layout_width="367dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="420dp"
                            android:background="@drawable/password_shape" />

                        <View
                            android:id="@+id/userid"
                            android:layout_width="367dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="340dp"
                            android:background="@drawable/userid_shape" />


                        <RelativeLayout
                            android:id="@+id/the_voice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="117dp"
                            android:layout_marginTop="63dp">

                            <ImageView
                                android:id="@+id/the_voice_ek1"
                                android:layout_width="192.68dp"
                                android:layout_height="26.9dp"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="0dp"
                                android:contentDescription="the_voice_ek1"
                                android:src="@drawable/the_voice_ek1" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/if_you_are_new_here_sign_up"
                            android:layout_width="251dp"
                            android:layout_height="37dp"
                            android:layout_marginLeft="110dp"
                            android:layout_marginTop="614dp"
                            android:fontFamily="Inter"
                            android:text="@string/if_you_are_new_here_sign_up_string"
                            android:textAlignment="center"
                            android:textColor="@color/_bg__iphone_13_pro_max___1_ek2_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/userid_ek1"
                            android:layout_width="142dp"
                            android:layout_height="31dp"
                            android:layout_marginLeft="39dp"
                            android:layout_marginTop="347dp"
                            android:fontFamily="Inter"
                            android:hint="@string/userid_ek1_string"
                            android:textColor="@color/map_view_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/password_ek1"
                            android:layout_width="121dp"
                            android:layout_height="31dp"
                            android:layout_marginLeft="40dp"
                            android:layout_marginTop="430dp"
                            android:fontFamily="Inter"
                            android:hint="@string/password_ek1_string"
                            android:textColor="@color/map_view_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </RelativeLayout>
            </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>